fix: header overflow

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -804,10 +804,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
